Minor fixes: - Fixed database error when importing a qual structure without installed levels - Fixed incorrect z-index on dialog, so it was behind the rules popups.

--- a/styles.css
+++ b/styles.css
@@ -4465,7 +4465,7 @@ progress.gt_progress[aria-valuenow]:before {
 
 .ui-dialog.gt_jq_dialog
 {
-    z-index: 999 !important;
+    z-index: 3001 !important;
 }
 
 
